--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,13 +1,16 @@
 name: Maven Build
+
 on:
   push:
+    branches: [ main ]
+  pull_request:
     branches: [ main ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      MAVEN_OPTS: "-Dmaven.repo.local=.m2/repository"
+      MAVEN_OPTS: "-Dmaven.repo.local=${{ github.workspace }}/.m2/repository"
 
     steps:
     - uses: actions/checkout@v4
@@ -15,16 +18,24 @@ jobs:
     - name: Set up JDK
       uses: actions/setup-java@v3
       with:
-        java-version: '21' # or your preferred version
+        java-version: '21'
         distribution: 'temurin'
-        cache: 'maven' # Automatic Maven dependency caching
+
+    - name: Cache Maven local repo
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.m2/repository
+          ${{ github.workspace }}/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
 
     - name: Build with Maven
-      run: mvn -B install
+      run: mvn -B verify --file pom.xml
 
     - name: Upload Artifact
       uses: actions/upload-artifact@v4
       with:
-        name: plugin-artifact
+        name: hpi-artifact
         path: target/s3trigger.hpi
-        retention-days: 180
