--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,7 +30,7 @@ jobs:
           ${{ runner.os }}-maven-
 
     - name: Build with Maven
-      run: mvn install -Denforcer.skip=true
+      run: mvn install
     - name: Upload Artifact
       uses: actions/upload-artifact@v4
       with:
