--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,7 +15,7 @@ jobs:
     - name: Set up JDK
       uses: actions/setup-java@v3
       with:
-        java-version: '17'
+        java-version: '21'
         distribution: 'temurin'
         cache: 'maven'
 
@@ -30,7 +30,8 @@ jobs:
           ${{ runner.os }}-maven-
 
     - name: Build with Maven
-      run: mvn install
+      run: mvn clean install
+
     - name: Upload Artifact
       uses: actions/upload-artifact@v4
       with:
@@ -41,8 +42,8 @@ jobs:
     - name: Create Release
       uses: softprops/action-gh-release@v1
       with:
-        tag_name: v1.0.1
-        name: Release v1.0.1
+        tag_name: v1.0.2
+        name: Release v1.0.2
         body: |-
           Release notes here
           - add release step 
